# AudioPathInspector

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/releases/: 0.2.0.md  0.2.1.md  0.3.0.md  0.4.0.md
include/audio_path_inspector/audio/: DeviceInspectionService.h
include/audio_path_inspector/model/: ApoInfo.h  AudioEffectInfo.h  AudioEnhancementsInfo.h  DeviceDetails.h  DeviceFlow.h  DeviceInspection.h  DeviceSummary.h  EndpointPropertyInfo.h  ModuleInfo.h  RegistryEvidenceInfo.h  StreamOpenResult.h
include/audio_path_inspector/windows/: ApoReader.h  AudioEffectsReader.h  AudioEnhancementsReader.h  AudiodgModuleReader.h  ComApartment.h  DeviceEnumerator.h  DeviceInfoReader.h  EndpointPropertyReader.h  RegistryEvidenceReader.h  StreamOpenTester.h
src/: main.cpp
src/app/: App.cpp  App.h  MainFrame.cpp  MainFrame.h
src/audio/: DeviceInspectionService.cpp
src/windows/: ApoReader.cpp  AudioEffectsReader.cpp  AudioEnhancementsReader.cpp  AudiodgModuleReader.cpp  DeviceEnumerator.cpp  DeviceInfoReader.cpp  EndpointPropertyReader.cpp  RegistryEvidenceReader.cpp  StreamOpenTester.cpp
